<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="am_btn_media_library_name">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="as_theme_dark">Темная тема</string>
    <string name="as_app_share">Поделиться приложением</string>
    <string name="as_write_support">Написать в поддержку</string>
    <string name="as_user_agree">Пользовательское соглашение</string>
    <string name="am_btn_media_name">Медиа</string>
    <string name="support_msg">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="as_user_agree_url" translatable="false">https://yandex.ru/legal/practicum_offer</string>
    <string name="url_practicum" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_email" translatable="false">ivanov-kir-m+support@yandex.ru</string>
    <string name="support_theme_msg">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="no_connection_msg">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="not_found_msg">Ничего не нашлось</string>
    <string name="refresh_btn">Обновить</string>
    <string name="search_title">Вы искали</string>
    <string name="clear_history_btn">Очистить историю</string>
    <string name="track_time_title">Длительность</string>
    <string name="collection_name_title">Альбом</string>
    <string name="release_date_title">Год</string>
    <string name="primary_genre_title">Жанр</string>
    <string name="country_title">Страна</string>
    <string name="default_play_time" translatable="false">00:00</string>
    <string name="media_library">Медиатека</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="new_playlist_btn">Новый плейлист</string>
    <string name="favourites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_media">Вы не создали\nни одного плейлиста</string>
    <string name="title_activity_root" translatable="false">RootActivity</string>
    <string name="tb_new_playlist_title">New playlist</string>
    <string name="et_new_playlist_name">Name*</string>
    <string name="et_new_playlist_description">Description</string>
    <string name="btn_new_playlist_create">Create</string>
    <string name="unsaved_data_lost">All unsaved data will be lost</string>
    <string name="finish_create_playlist">Finish creating a playlist?</string>
    <string name="add_new_playlist_massage">"Playlist %1$s created"</string>
    <string name="playlist_is_already">"The playlist with the name %1$s has already been created.\nEnter a different name."</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_track_to_playlist">"Added to playlist %1$s."</string>
    <string name="track_is_already_in_playlist">"Track has already added to playlist %1$s."</string>
    Add to playlist
    <plurals name="tracks_hint">
        <item quantity="zero">%1$d tracks</item>
        <item quantity="one">%1$d track</item>
        <item quantity="two">%1$d track</item>
        <item quantity="few">%1$d track</item>
        <item quantity="many">%1$d tracks</item>
        <item quantity="other">%1$d tracks</item>
    </plurals>
    <string name="cancel">"Cancel"</string>
    <string name="finish">"Finish"</string>
    <string name="edit_playlist_massage">"Playlist %1$s saved"</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="delete_track">Delete track</string>
    <string name="u_sure_delete_track">Are you sure you want to delete a track from your playlist?</string>
    <string name="empty_track_list">There is no track list to share in this playlist.</string>
    <string name="share">Share</string>
    <string name="edit_info">Edit information</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="u_sure_delete_playlist">Do you want to delete a playlist?</string>
    <string name="editor">Edit</string>
    <string name="save">Save</string>
    <string name="finish_update_playlist">Finish editing?</string>
    <string name="no_track_in_playlist">There are no tracks in the playlist.</string>
    <plurals name="minutes">
        <item quantity="zero">%1$d minutes</item>
        <item quantity="one">%1$d minute</item>
        <item quantity="two">%1$d minutes</item>
        <item quantity="few">%1$d minutes</item>
        <item quantity="many">%1$d minutes</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
</resources>