<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        style="@style/MenuTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/main_height"
        android:paddingBottom="@dimen/padding_toolbar"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/asDarkThemeSwch"
        style="@style/SwitchStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height"
        android:paddingHorizontal="@dimen/main_indent"
        android:text="@string/as_theme_dark" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/asShareBtn"
        style="@style/MenuItemsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height"
        android:paddingHorizontal="@dimen/main_indent"
        android:text="@string/as_app_share"
        app:drawableEndCompat="@drawable/share" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/asSupportBtn"
        style="@style/MenuItemsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height"
        android:paddingHorizontal="@dimen/main_indent"
        android:text="@string/as_write_support"
        app:drawableEndCompat="@drawable/support" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/asUserAgreeBtn"
        style="@style/MenuItemsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height"
        android:paddingHorizontal="@dimen/main_indent"
        android:text="@string/as_user_agree"
        app:drawableEndCompat="@drawable/right_arr" />

</LinearLayout>