<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragment">

    <TextView style="@style/MenuTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text = "@string/search" />
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_indent"
        android:layout_marginBottom="@dimen/padding_toolbar"
        android:background="@drawable/icn_search_background"
        android:orientation="horizontal"
        android:padding="@dimen/padding_search_frame">


        <EditText
            android:id="@+id/inputEditText"
            style="@style/SearchTextEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="search_str"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/padding_search_string"
            android:drawableTint="@color/default_search"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:paddingStart="@dimen/padding_search_string"
            android:src="@drawable/clear_btn"
            android:visibility="gone"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/history_title"
                    style="@style/SearchTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_title"
                    android:text="@string/search_title"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trackSearchRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear_history_btn"
                    style="@style/PlaylistMakerPrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_toolbar"
                    android:minHeight="36dp"
                    android:text="@string/clear_history_btn"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/error_ph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/error_icn_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icn_no_connection" />

            <TextView
                android:id="@+id/error_text_ph"
                style="@style/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_toolbar"
                android:text="@string/no_connection_msg" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/refresh_btn"
                style="@style/PlaylistMakerPrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_btn"
                android:visibility="gone" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:indeterminateTint="@color/color_pb"
            android:visibility="gone" />

    </FrameLayout>
</LinearLayout>